# CCLE-Pharmacoset_Snakemake

./: .gitignore  README.md  Snakefile  pixi.toml  pyproject.toml
config/: pipeline.yaml
qc/: CCLE_Drug_QC.Rmd  CCLE_Drug_QC.html  CCLE_Epigenetics_QC.Rmd  CCLE_Epigenetics_QC.html  CCLE_Genomic_QC.Rmd  CCLE_Genomic_QC.html  CCLE_Metabolomics_QC.Rmd  CCLE_Metabolomics_QC.html  CCLE_MultiOmics_Overview.Rmd  CCLE_MultiOmics_Overview.html  CCLE_Proteomics_QC.Rmd  CCLE_RNAseq_QC.Rmd  CCLE_RNAseq_QC.html  qc_palette.R
resources/: snakemake_template.R
workflow/: utils.py
workflow/config/: pipeline.yaml
workflow/envs/: pipeline.yaml  r-bioconductor.yaml  treatmentResponse.post-deploy.sh
workflow/profiles/gcp/: config.yaml
workflow/profiles/local/: config.yaml
workflow/report/: somedata.rst
workflow/rules/: chromatin.smk  cnv.smk  cnv_segments.smk  downloadGENCODE.smk  epigenetics.smk  exon.smk  fusion.smk  massspec.smk  metabolomics.smk  metadata.smk  mirna.smk  mutation.smk  rnaseq.smk  rppa.smk  treatmentResponse.smk
workflow/scripts/: ExportPSet.R  build_MultiAssayExperiment.R  build_PharmacoSet.R  template.R
workflow/scripts/chromatin/: make_Chromatin_SE.R
workflow/scripts/cnv/: make_CNV_SE.R  make_CNV_segments_RE.R
workflow/scripts/epigenetics/: make_Methylation_SE.R
workflow/scripts/exon/: make_ExonUsage_SE.R
workflow/scripts/fusion/: make_Fusion_SE.R
workflow/scripts/metabolomics/: make_Metabolomics_SE.R
workflow/scripts/metadata/: annotate_sampleMetadata.R  annotate_treatmentMetadata.R  cleanCharacterStrings.R  preprocessMetadata.R  (+1 more)
(+9 files in other folders)
