
[project]
name = "CCLE-Pharmacoset_Snakemake"
version = "0.1.0"

[tool.pixi.project]
name = "CCLE-Pharmacoset_Snakemake"
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.system-requirements]
linux = "5.4.203"

[tool.pixi.target.linux-64.dependencies] # apptainer not available on osx
apptainer = { version = ">=1.2.5,<1.3", channel = "conda-forge" }

[tool.pixi.dependencies]
snakemake = ">=8.10.6,<8.11"
snakefmt = ">=0.10.0,<0.11"
snakemake-storage-plugin-http = ">=0.2.3,<0.3"
snakemake-storage-plugin-gcs = ">=0.1.4,<0.2"
snakemake-executor-plugin-kubernetes = ">=0.1.5,<0.2"

[tool.pixi.tasks]
dryrun = "snakemake --dry-run"
snake = "snakemake --cores 1"
gcp = "snakemake --profile workflow/profiles/gcp --software-deployment-method conda apptainer"
gcpkube = "snakemake --profile workflow/profiles/gcp --software-deployment-method conda apptainer --executor kubernetes" 
fmt = "snakefmt ."

dag = "snakemake -F --dag | dot -Tsvg > resources/dag.svg"
rulegraph = "snakemake -F --rulegraph | dot -Tsvg > resources/rulegraph.svg"
filegraph = "snakemake -F --filegraph | dot -Tsvg > resources/filegraph.svg"
graphs = { depends_on = ["dag", "rulegraph", "filegraph"] }



[tool.snakefmt]
line_length = 90
include = '\.smk$|^Snakefile|\.py$'

